<resources>
    <string name="app_name">Movie Mania</string>
    <string name="icon_rating">Icon rating</string>
    <string name="poster_film">Poster Film</string>
    <string name="back">Back</string>
    <string name="background_image">Background Image</string>
    <string name="format_vote_count">(%1$s votes)</string>
    <string name="profile">Profile</string>
    <string name="role">Super Admin</string>
    <string name="name">Muhamad Irwan Ramadhan</string>
    <string name="email">muhamadirwan99@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="chevron_right">Chevron right</string>
    <string name="logout">Logout</string>
    <string name="share_movie">Share Movie</string>
</resources>